"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
-[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
-Cloning into 'think-java-asianaaron2'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK] Re-using code.
 
 <hr>
 
@@ -110,7 +105,7 @@ Ch6Ex5.java:57: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']
+  [EXPECTING TARGETS] ['Swettercise1']
 [TESTING WITH] SwetterciseTest
 [COMPILING] SwetterciseTest.java
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
@@ -124,7 +119,7 @@ Exception in thread "main" java.lang.NullPointerException
 	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
 	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
 	<br>
-[SUMMARY] ['Swettercise: PASSED, EXCELLENT!']
+[SUMMARY] ['Swettercise1: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">1.00</font></b>
