--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[SETUP] Creating student dir:  ./stuwork/AdamRashid
-[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
-Cloning into 'think-java-AdamRashid'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK] Re-using code.
 
 <hr>
 
@@ -71,8 +66,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 20
-	You were off by: 7
+	The number I was thinking of is: 86
+	You were off by: 73
 	
 <--
 	[OUTPUT OK]
@@ -155,25 +150,46 @@ Ch6Ex4.java:56: error: cannot find symbol
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
-  [EXPECTING TARGETS] ['Swettercise']
-[COMPILING] Swettercise.java
-	[SUCCESSFUL COMPILE] Swettercise.java
+  [EXPECTING TARGETS] ['Swettercise1']
+[COMPILING] Swettercise1.java
+	[SUCCESSFUL COMPILE] Swettercise1.java
 [TESTING WITH] SwetterciseTest
 [COMPILING] SwetterciseTest.java
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-	[ERROR] Runtime Error @ java SwetterciseTest
-Exception in thread "main" java.lang.NullPointerException
-	<br>	at java.lang.String.<init>(String.java:166)
-	<br>	at java.lang.String.valueOf(String.java:3008)
-	<br>	at SwetterciseTest.testIsPrime(SwetterciseTest.java:109)
-	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
-	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
-	<br>
-[SUMMARY] ['Swettercise: PASSED, EXCELLENT!']
+
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">6, 3, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">2, 1</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.13999999999999999]
+	
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Swettercise1: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] <font color="green">0.86</font></b>
 
 </pre></body></html>
