"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -47,7 +47,7 @@ The number of seconds since midnight: 83505seconds
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[SUMMARY] ['Exercise3: COMPILE ERROR', 'Exercise4: COMPILE ERROR']
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -61,7 +61,7 @@ The number of seconds since midnight: 83505seconds
 [SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.72</b>
+<b>          [SCORE] 0.65</b>
 
 <hr>
 
@@ -70,34 +70,10 @@ The number of seconds since midnight: 83505seconds
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[TESTING WITH] Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:56: error: cannot find symbol
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                           ^
-	  symbol:   variable Exercise4
-	  location: class Ch6Ex4
-	1 error
-	
------------END COMPILE-------
-[TESTING WITH] Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[ERROR] javac failed Ch6Ex5.java
- ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
-	            boolean isIt = Exercise5.isDoubloon(testStr);
-	                           ^
-	  symbol:   variable Exercise5
-	  location: class Ch6Ex5
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.20</b>
 
 <hr>
 
@@ -106,22 +82,9 @@ Ch6Ex5.java:57: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[TESTING WITH] SwetterciseTest
-[COMPILING] SwetterciseTest.java
-	[SUCCESSFUL COMPILE] SwetterciseTest.java
-[RUNNING] SwetterciseTest
--->
-	[ERROR] Runtime Error @ java SwetterciseTest
-Exception in thread "main" java.lang.NullPointerException
-	<br>	at java.lang.String.<init>(String.java:166)
-	<br>	at java.lang.String.valueOf(String.java:3008)
-	<br>	at SwetterciseTest.testIsPrime(SwetterciseTest.java:109)
-	<br>	at SwetterciseTest.doTestPrime(SwetterciseTest.java:42)
-	<br>	at SwetterciseTest.main(SwetterciseTest.java:12)
-	<br>
-[SUMMARY] ['Swettercise1: PASSED, EXCELLENT!']
+[SUMMARY] ['Swettercise1: MISSING']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
