"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
+[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
+Cloning into 'think-java-asianaaron2'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -56,12 +61,17 @@ The number of seconds since midnight: 83505seconds
 	[SUCCESSFUL COMPILE] Multadd.java
 [RUNNING] Multadd
 -->
-	[ERROR] Runtime Error @ java Multadd
+5.0
+	1.0606601717798212
+	5.298317366548037
+	
+<--
+	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: RUNTIME ERROR']
+[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.65</b>
+<b>          [SCORE] 0.73</b>
 
 <hr>
 
