--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -7,8 +7,13 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
+Cloning into 'think-java-AdamRashid'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -66,8 +71,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 26
-	You were off by: 13
+	The number I was thinking of is: 31
+	You were off by: 18
 	
 <--
 	[OUTPUT OK]
