"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,7 +7,6 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
 [PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
@@ -52,7 +51,16 @@ The number of seconds since midnight: 83505seconds
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+Enter any number in seconds: 
+	13 second(s) = 0 hour(s), 13 minute(s), and 13 second(s)
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -71,7 +79,7 @@ The number of seconds since midnight: 83505seconds
 [SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] 0.73</b>
+<b>          [SCORE] <font color="green">0.87</font></b>
 
 <hr>
 
