--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -7,6 +7,7 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
 [PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
@@ -46,7 +47,11 @@ The number of seconds since midnight: 83505seconds
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
+[SUMMARY] 
+	['Date: PASSED
+	 EXCELLENT!'
+	 'Time: PASSED
+	 EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -60,7 +65,10 @@ Enter any number in seconds:
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: MISSING']
+[SUMMARY] 
+	['Exercise3: PASSED
+	 EXCELLENT!'
+	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -76,10 +84,12 @@ Enter any number in seconds:
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
+[SUMMARY] 
+	['Multadd: PASSED
+	 EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-<b>          [SCORE] <font color="green">0.87</font></b>
+<b>          [SCORE] <font color="green">0.83</font></b>
 
 <hr>
 
@@ -88,10 +98,12 @@ Enter any number in seconds:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+[SUMMARY] 
+	['Exercise4: MISSING (- 0.50)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -100,9 +112,10 @@ Enter any number in seconds:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[SUMMARY] ['Swettercise1: MISSING']
+[SUMMARY] 
+	['Swettercise1: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.50</b>
 
 </pre></body></html>
