"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -48,10 +48,8 @@ The number of seconds since midnight: 83505seconds
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Date: PASSED
-	 EXCELLENT!'
-	 'Time: PASSED
-	 EXCELLENT!']
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -66,8 +64,7 @@ Enter any number in seconds:
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise3: PASSED
-	 EXCELLENT!'
+	['Exercise3: PASSED - EXCELLENT!'
 	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
@@ -85,8 +82,7 @@ Enter any number in seconds:
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Multadd: PASSED
-	 EXCELLENT!']
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">0.83</font></b>
