--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -51,10 +51,8 @@ Seconds since midnight:
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Date: PASSED
-	 EXCELLENT!'
-	 'Time: PASSED
-	 EXCELLENT!']
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -75,17 +73,15 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 5
-	You were off by: 8
+	The number I was thinking of is: 42
+	You were off by: 29
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Exercise3: PASSED
-	 EXCELLENT!'
-	 'Exercise4: PASSED
-	 EXCELLENT!']
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -103,8 +99,7 @@ I'm thinking of a number between 1 and 100(Including Both)
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Multadd: PASSED
-	 EXCELLENT!']
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
@@ -156,8 +151,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 
 [SUMMARY] 
 	['Exercise4: COMPILE ERROR (- 0.30)'
-	 'Exercise5: PASSED
-	 EXCELLENT!']
+	 'Exercise5: PASSED - EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] 0.70</b>
@@ -206,8 +200,7 @@ Ch6Ex4.java:56: error: cannot find symbol
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED
-	 BUT TEST CASES FOUND SOME ERRORS']
+	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">0.86</font></b>
